...
    <string name="textView_feed">Feed</string>
    <string name="feed_headline">Die neusten Rezepte</string>
    <string name="group_title_fragment">Gruppen</string>
    <string name="create_group">Gruppe erstellen</string>
    <string name="friend_title">Freunde</string>
    <string name="friend_requests">Freundschaftsanfragen</string>
    <string name="search_button">Suchen</string>
    <string name="enter_user_id">Gib dir einen Nutzernamen</string>
    <string name="admin_remove_item">Löschen</string>
    <string name="public_recipe_search_title">Suche ein Rezept</string>
    <string name="recipe_title">Titel des Rezeptes</string>

    <!--Strings übernommen von beispiel-->
...
    <string name="my_profile_title">Mein Profil</string>
    <string name="min">min</string>
    <string name="preptime">Zubereitungszeit:</string>
    <string name="share">Teilen</string>
    <string name="logout">Ausloggen</string>
    <string name="reportRecipe">melden</string>
    <string name="titel">Titel</string>
    <string name="favourites_head_title">Favoriten</string>
    <string name="favourites_header">Favoriten</string>
    <string name="portions_headline">Anzahl Portionen: </string>
    <string name="portion_amount">Portionenanzahl</string>
    <string name="creation_time_headline">Erstellungsdatum:</string>
    <string name="load_more">Mehr laden</string>
...
