...
                    android:id="@+id/radioButton_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date" />

                <RadioButton
                    android:id="@+id/radioButton_titel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titel" />


            </RadioGroup>
...
